# talon

./: .gitignore  BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Justfile  README.md  rust-toolchain.toml  rustfmt.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pr-title.yml
bench/baselines/: main.json
crates/talon-backend/: Cargo.toml
crates/talon-backend/src/: azure.rs  gcs.rs  http.rs  lib.rs  reqwest_client.rs  s3.rs
crates/talon-client/: Cargo.toml
crates/talon-client/src/: main.rs
crates/talon-client/tests/: control_path.rs
crates/talon-coordinator/: Cargo.toml
crates/talon-coordinator/benches/: placement_benches.rs
crates/talon-coordinator/src/: api.rs  config.rs  heartbeat.rs  lib.rs  load.rs  main.rs  membership.rs  observability.rs  openapi.json  placement.rs  security.rs  service.rs  ui.rs
crates/talon-coordinator/src/state_store/: config.rs  etcd.rs  kubernetes.rs  memory.rs  mod.rs  testkit.rs
crates/talon-coordinator/tests/: etcd_contract.rs  ha_failover.rs  kubernetes_contract.rs  management_e2e.rs
crates/talon-coordinator/tests/harness/: mod.rs
crates/talon-coordinator/ui/: README.md  index.html
crates/talon-coordinator/ui/assets/: app.css  app.js
crates/talon-coordinator/ui/tests/: fleet.test.js
crates/talon-core/: Cargo.toml
crates/talon-core/benches/: core_benches.rs
crates/talon-core/src/: backend.rs  block.rs  config.rs  error.rs  key.rs  lib.rs  metrics.rs  node.rs  status.rs  store.rs  trace.rs
crates/talon-fuse/: Cargo.toml
crates/talon-fuse/src/: block_reader.rs  bridge.rs  coordinator_client.rs  fs.rs  lib.rs  main.rs  mapping.rs  metrics.rs  mount.rs  ops.rs  placement_cache.rs  prefetch.rs  read_plan.rs  readahead.rs  worker_client.rs
crates/talon-fuse/tests/: read_path_e2e.rs
crates/talon-observability/: Cargo.toml
crates/talon-observability/src/: deploy.rs  lib.rs
crates/talon-transport/: Cargo.toml
crates/talon-transport/src/: codec.rs  data.rs  frame.rs  lib.rs  limits.rs  pool.rs  runtime.rs
crates/talon-worker/: Cargo.toml
crates/talon-worker/benches/: observability_benches.rs
crates/talon-worker/src/: block_store.rs  capacity.rs  eviction.rs  index.rs  lib.rs  loader.rs  main.rs  memory_store.rs  miss.rs  observability.rs  paged_store.rs  runtime.rs  sendfile.rs  splice.rs  staging.rs
deploy/kubernetes/: README.md  coordinator-etcd.yaml  coordinator-kubernetes.yaml  etcd-secret.example.yaml  rbac.yaml  service.yaml  servicemonitor.yaml
deploy/observability/: README.md
deploy/observability/grafana/: talon-cluster-overview.json
deploy/observability/prometheus/: talon.alerts.yml  talon.rules.yml
docs/adr/: 0001-management-plane-ha.md
docs/operations/: runbook.md  security.md
scripts/: bench.py  e2e_azure.sh
