[package]
name = "talon-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Blob-store BackendStore implementations (S3/GCS/Azure) for Talon"

[dependencies]
talon-core.workspace = true
async-trait.workspace = true
bytes.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[dev-dependencies]
tokio.workspace = true
