[package]
name = "talon-coordinator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Cluster coordinator: metadata, membership, and object placement for Talon"

[[bin]]
name = "talon-coordinator"
path = "src/main.rs"

[features]
state-store-testkit = []

[dependencies]
talon-core.workspace = true
talon-transport.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
clap.workspace = true
async-trait.workspace = true
thiserror.workspace = true
serde_json.workspace = true
toml.workspace = true
axum.workspace = true

[dev-dependencies]
divan.workspace = true

[[bench]]
name = "placement_benches"
harness = false
