[package]
name = "talon-coordinator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Cluster coordinator: metadata, membership, and object placement for Talon"

[[bin]]
name = "talon-coordinator"
path = "src/main.rs"

[features]
state-store-testkit = []
# Production Kubernetes Lease ClusterStateStore backend. Off by default so
# non-Kubernetes builds do not pull in the kube/k8s-openapi client stack.
kubernetes = ["dep:kube", "dep:k8s-openapi", "dep:futures"]

[dependencies]
talon-core.workspace = true
talon-transport.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
clap.workspace = true
async-trait.workspace = true
thiserror.workspace = true
serde_json.workspace = true
toml.workspace = true
axum.workspace = true
xxhash-rust.workspace = true
kube = { workspace = true, optional = true }
k8s-openapi = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

[dev-dependencies]
divan.workspace = true
tokio.workspace = true

[[bench]]
name = "placement_benches"
harness = false
