[package]
name = "talon-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared types, traits, and protocol definitions for Talon distributed cache"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
async-trait.workspace = true
tracing.workspace = true
