[package]
name = "talon-fuse"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "FUSE filesystem client exposing the Talon cache as a mountable POSIX filesystem"

[[bin]]
name = "talon-fuse"
path = "src/main.rs"

[dependencies]
talon-core.workspace = true
talon-transport.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
async-trait.workspace = true
thiserror.workspace = true

# Uncomment to implement the actual FUSE mount layer:
# fuser = "0.14"
