[package]
name = "talon-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
talon-core.workspace = true
thiserror.workspace = true
serde.workspace = true
bincode.workspace = true

[dev-dependencies]
