[package]
name = "talon-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Worker node: stores and serves cached object data for Talon"

[[bin]]
name = "talon-worker"
path = "src/main.rs"

[[bench]]
name = "observability_benches"
harness = false

[dependencies]
talon-core.workspace = true
talon-transport.workspace = true
talon-backend = { path = "../talon-backend" }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytes.workspace = true
async-trait.workspace = true
clap.workspace = true
xxhash-rust.workspace = true
libc.workspace = true
serde_json.workspace = true
axum.workspace = true

[dev-dependencies]
divan.workspace = true
